snapshots/com/wadpam/openserver/errors/maven-metadata.xml.sha1
1199d70ee63fced6f9e5ca8c5be62a84364958ad